--- a/src/partials/modal-revievs.html
+++ b/src/partials/modal-revievs.html
@@ -11,7 +11,7 @@
                >our chocolate</span
             >
          </h2>
-         <div class="reviews-modal-field">
+         <div class="reviews-modal-field item-text">
             <input
                type="text"
                name="user_name"
@@ -19,7 +19,7 @@
                class="reviews-form-input"
             />
          </div>
-         <div class="reviews-modal-field">
+         <div class="reviews-modal-field item-text">
             <input
                type="email"
                name="user_email"
@@ -27,7 +27,7 @@
                class="reviews-form-input"
             />
          </div>
-         <div class="reviews-modal-field phone">
+         <div class="reviews-modal-field item-text item-phone">
             <input
                type="tel"
                name="user_phone"
@@ -42,7 +42,7 @@
                <span class="reviews-slash">|</span>
             </div>
          </div>
-         <div class="reviews-modal-field">
+         <div class="reviews-modal-field item-message">
             <textarea
                name="user_message" 
                placeholder="Enter text"
@@ -58,7 +58,7 @@
 <div class="backdrop is-hidden" data-modal>
    <div class="reviews-modal-two">     
       <div class="reviews-modal-two-text">
-         <h2 class="reviews-two-description">Thank you for your feedback!</h2>
+         <h2 class="reviews-two-description">Thank you for your feedback !</h2>
          <a class=" reviews-send-two-btn modal-scroll" data-modal-close href="#ancor">Close</a>  
       </div>          
    </div>
