--- a/src/partials/modal-hero.html
+++ b/src/partials/modal-hero.html
@@ -100,7 +100,7 @@
             <p class="form-text">Comment</p>
             <textarea  class="hero-item-input comment-input" name="comment" placeholder="Enter text"></textarea>
          </label>
-         <button class="hero-form-send" type="submit">Submit</button>
+         <button class="hero-form-send button-orange" type="submit">Submit</button>
       </form>
    </div>
 </div>
