--- a/src/partials/section-components.html
+++ b/src/partials/section-components.html
@@ -8,114 +8,121 @@
         Milk chocolate is a solid chocolate confectionery containing cocoa, sugar and milk. It is the most consumed type of chocolate. Chocolate was originally sold and consumed as a beverage in pre-Columbian times. Although four-fifths of all milk chocolate is sold in the United States and Europe.
       </p>
       <ul class="component-menu">
-         <li class="component-card">
-            <div class="component-card-item item-front">
-               <picture>
-                  <source
-                     srcset="./img/components/chocolate-tabler-mobile.png 1x, ./img/components/chocolate-tabler-mobile-x2.png 2x"
-                     media="(max-width:767px)"
-                  />
-                  <source
-                  srcset="./img/components/chocolate-item.png 1x, ./img/components/chocolate-item-x2.png 2x"
-                  media="(min-width:767px)"
-               />
-                  <img
-                     class="componnents-img"
-                     src="./img/components/chocolate-item.png"
-                     alt="chokolate-item"
-                     width="270"
-                  />
-               </picture>
-               <h3 class="component-card-item-title">Milk chocolate</h3>
-            </div>
-            <div class="component-card-item item-back">
-               <h3 class="component-card-title">Milk chocolate</h3>
-               <div class="overlay-subtitle-row">
-                  <p class="overlay-subtitle-item">chocolate</p>
-                  <p class="overlay-subtitle-item">the benefits</p>
-               </div>
-               <p class="overlay-text">Milk is a white liquid food produced by the mammary glands of mammals. It is the primary source of nutrition for young mammals (including breastfed human infants) before they are able to digest solid food.Early-lactation milk, which is called colostrum, contains antibodies that strengthen the immune system.</p>
-            </div>
+         <li class="component-card-wrapper">
+            <a href="#" class="component-card">
+                <div class="component-card-item item-front">
+                   <picture>
+                      <source
+                         srcset="./img/components/chocolate-tabler-mobile.png 1x, ./img/components/chocolate-tabler-mobile-x2.png 2x"
+                         media="(max-width:767px)"
+                      />
+                      <source
+                      srcset="./img/components/chocolate-item.png 1x, ./img/components/chocolate-item-x2.png 2x"
+                      media="(min-width:767px)"
+                   />
+                      <img
+                         class="componnents-img"
+                         src="./img/components/chocolate-item.png"
+                         alt="chokolate-item"
+                         width="270"
+                      />
+                   </picture>
+                   <h3 class="component-card-item-title">Milk chocolate</h3>
+                </div>
+                <div class="component-card-item item-back">
+                   <h3 class="component-card-title">Milk chocolate</h3>
+                   <div class="overlay-subtitle-row">
+                      <p class="overlay-subtitle-item">chocolate</p>
+                      <p class="overlay-subtitle-item">the benefits</p>
+                   </div>
+                   <p class="overlay-text">Milk is a white liquid food produced by the mammary glands of mammals. It is the primary source of nutrition for young mammals (including breastfed human infants) before they are able to digest solid food.Early-lactation milk, which is called colostrum, contains antibodies that strengthen the immune system.</p>
+                </div>
+            </a>
          </li>
 
-         <li class="component-card">
-            <div class="component-card-item item-front">
-               <picture>
-                  <source
-                     srcset="./img/components/milk-tablet-mobile.png 1x, ./img/components/milk-tablet-mobile-x2.png 2x"
-                     media="(max-width:767px)"
-                  />
-                  <source
-                     srcset="./img/components/milk-desktop.png 1x, ./img/components/milk-desktop-x2.png 2x"
-                     media="(min-width:768px)"
-                  />
-                  <img
-                     class="componnents-img"
-                     src="./img/components/milk-desktop.png"
-                     alt=""
-                     width="270"
-                  />
-               </picture>
-               <h3 class="component-card-item-title">Milk</h3>
-            </div>
-            <div class="component-card-item item-back">
-               <h3 class="component-card-title">Milk</h3>
-               <div class="overlay-subtitle-row">
-                <p class="overlay-subtitle-item">chocolate</p>
-                <p class="overlay-subtitle-item">the benefits</p>
-               </div>
-               <p class="overlay-text">Milk chocolate is a solid chocolate confectionery containing cocoa, sugar and milk. It is the most consumed type of chocolate. Chocolate was originally sold and consumed as a beverage in pre-Columbian times. Although four-fifths of all milk chocolate is sold in the United States and Europe.</p>
-            </div>
+         <li class="component-card-wrapper">
+            <a href="#" class="component-card">
+                <div class="component-card-item item-front">
+                   <picture>
+                      <source
+                         srcset="./img/components/milk-tablet-mobile.png 1x, ./img/components/milk-tablet-mobile-x2.png 2x"
+                         media="(max-width:767px)"
+                      />
+                      <source
+                         srcset="./img/components/milk-desktop.png 1x, ./img/components/milk-desktop-x2.png 2x"
+                         media="(min-width:768px)"
+                      />
+                      <img
+                         class="componnents-img"
+                         src="./img/components/milk-desktop.png"
+                         alt=""
+                         width="270"
+                      />
+                   </picture>
+                   <h3 class="component-card-item-title">Milk</h3>
+                </div>
+                <div class="component-card-item item-back">
+                   <h3 class="component-card-title">Milk</h3>
+                   <div class="overlay-subtitle-row">
+                    <p class="overlay-subtitle-item">chocolate</p>
+                    <p class="overlay-subtitle-item">the benefits</p>
+                   </div>
+                   <p class="overlay-text">Milk chocolate is a solid chocolate confectionery containing cocoa, sugar and milk. It is the most consumed type of chocolate. Chocolate was originally sold and consumed as a beverage in pre-Columbian times. Although four-fifths of all milk chocolate is sold in the United States and Europe.</p>
+                </div>
+            </a>
          </li>
 
-         <li class="component-card">
-            <div class="component-card-item item-front">
-               <picture>
-                  <source
-                     srcset="./img/components/nuts-tablet-mobile.png 1x, ./img/components/nuts-tablet-mobile-x2.png 2x"
-                     media="(max-width:767px)"
-                  />
-                  <source
-                     srcset="./img/components/nuts-desktop.png 1x, ./img/components/nuts-desktop-x2.png 2x"
-                     media="(min-width:768px)"
-                  />
-                  <img
-                     class="componnents-img"
-                     src="./img/components/milk-desktop.png"
-                     alt=""
-                     width="270"
-                  />
-               </picture>
-               <h3 class="component-card-item-title">nuts</h3>
-            </div>
-            <div class="component-card-item item-back">
-               <h3 class="component-card-title">nuts</h3>
-               <div class="overlay-subtitle-row">
-                <p class="overlay-subtitle-item">chocolate</p>
-                <p class="overlay-subtitle-item">the benefits</p>
-               </div>
-               <p class="overlay-text">Almonds, pistachios, and walnuts are some types of nuts that contain healthy nutrients. When eaten as part of a nutrient-dense diet, these 9 nuts may offer benefits such as reducing your risk of heart disease. They’re a good source of fiber, healthy fats, and plant protein. Plus, they’re great on their own.</p>
-            </div>
+         <li class="component-card-wrapper">
+            <a class="component-card" href="#">
+                <div class="component-card-item item-front">
+                   <picture>
+                      <source
+                         srcset="./img/components/nuts-tablet-mobile.png 1x, ./img/components/nuts-tablet-mobile-x2.png 2x"
+                         media="(max-width:767px)"
+                      />
+                      <source
+                         srcset="./img/components/nuts-desktop.png 1x, ./img/components/nuts-desktop-x2.png 2x"
+                         media="(min-width:768px)"
+                      />
+                      <img
+                         class="componnents-img"
+                         src="./img/components/milk-desktop.png"
+                         alt=""
+                         width="270"
+                      />
+                   </picture>
+                   <h3 class="component-card-item-title">nuts</h3>
+                </div>
+                <div class="component-card-item item-back">
+                   <h3 class="component-card-title">nuts</h3>
+                   <div class="overlay-subtitle-row">
+                    <p class="overlay-subtitle-item">chocolate</p>
+                    <p class="overlay-subtitle-item">the benefits</p>
+                   </div>
+                   <p class="overlay-text">Almonds, pistachios, and walnuts are some types of nuts that contain healthy nutrients. When eaten as part of a nutrient-dense diet, these 9 nuts may offer benefits such as reducing your risk of heart disease. They’re a good source of fiber, healthy fats, and plant protein. Plus, they’re great on their own.</p>
+                </div>
+            </a>
          </li>
 
-         <li class="component-card">
-            <div class="component-card-item item-front">
-               <picture>
-                  <source
-                     srcset="./img/components/coffe-tablet-mobile.png 1x, ./img/components/coffe-tablet-mobile-x2.png 2x"
-                     media="(max-width:767px)"
-                  />
-                  <source
-                     srcset="./img/components/coffe-tablet-mobile.png 1x, ./img/components/coffe-tablet-mobile-x2.png 2x"
-                     media="(min-width:768px)"
-                  />
-                  <img
-                     class="componnents-img"
-                     src="./img/components/coffe-desktop.png"
-                     alt=""
-                     width="270"
-                  />
-               </picture>
+         <li class="component-card-wrapper">
+            <a href="#" class="component-card">
+                <div class="component-card-item item-front">
+                   <picture>
+                      <source
+                         srcset="./img/components/coffe-tablet-mobile.png 1x, ./img/components/coffe-tablet-mobile-x2.png 2x"
+                         media="(max-width:767px)"
+                      />
+                      <source
+                         srcset="./img/components/coffe-tablet-mobile.png 1x, ./img/components/coffe-tablet-mobile-x2.png 2x"
+                         media="(min-width:768px)"
+                      />
+                      <img
+                         class="componnents-img"
+                         src="./img/components/coffe-desktop.png"
+                         alt=""
+                         width="270"
+                      />
+                   </picture>
                <h3 class="component-card-item-title">sEMI - SWEET CHOCOLATE</h3>
             </div>
             <div class="component-card-item item-back">
@@ -126,6 +133,7 @@
                </div>
                <p class="overlay-text">Semi-sweet chocolate has a cocoa solid content of 35 to 65%. One of the best ways to gain an understanding of this type of chocolate is to compare it to a different type of chocolate. Semisweet is darker than milk chocolate. In a taste comparison, it has a slightly bitter taste whereas milk chocolate is sweeter and more mellow. </p>
             </div>
+            </a>
          </li>
 
         
