--- a/src/partials/section-components.html
+++ b/src/partials/section-components.html
@@ -1,4 +1,4 @@
-<section class="components">
+<section class="components" id="components">
    <div class="container">
       <h2 class="component-title">
          it all adds up to one exceptional
@@ -8,8 +8,8 @@
         Milk chocolate is a solid chocolate confectionery containing cocoa, sugar and milk. It is the most consumed type of chocolate. Chocolate was originally sold and consumed as a beverage in pre-Columbian times. Although four-fifths of all milk chocolate is sold in the United States and Europe.
       </p>
       <ul class="component-menu">
-         <li class="component-card-wrapper">
-            <a href="#" class="component-card">
+         <li class="component-card-wrapper" id="sweet-chokolate">
+            <a href="#components" class="component-card">
                 <div class="component-card-item item-front">
                    <picture>
                       <source
@@ -41,7 +41,7 @@
          </li>
 
          <li class="component-card-wrapper">
-            <a href="#" class="component-card">
+            <a href="#components" class="component-card">
                 <div class="component-card-item item-front">
                    <picture>
                       <source
@@ -51,6 +51,7 @@
                       <source
                          srcset="./img/components/milk-desktop.png 1x, ./img/components/milk-desktop-x2.png 2x"
                          media="(min-width:768px)"
+                         
                       />
                       <img
                          class="componnents-img"
@@ -73,7 +74,7 @@
          </li>
 
          <li class="component-card-wrapper">
-            <a class="component-card" href="#">
+            <a class="component-card"  href="#components">
                 <div class="component-card-item item-front">
                    <picture>
                       <source
@@ -105,7 +106,7 @@
          </li>
 
          <li class="component-card-wrapper">
-            <a href="#" class="component-card">
+            <a href="#sweet-chokolate" class="component-card">
                 <div class="component-card-item item-front">
                    <picture>
                       <source
