--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -78,7 +78,7 @@
                   >
                </li>
                <li class="footer-navigation-item">
-                  <a class="footer-navigation-link" href="#review"
+                  <a class="footer-navigation-link" href="#revievs"
                      >Chocolate is loved</a
                   >
                </li>
