--- a/src/partials/section-howtomade.html
+++ b/src/partials/section-howtomade.html
@@ -30,21 +30,30 @@
                class="howtomade-img"
                src="./img/howmade/video-wpapper-desktop-x1.jpg"
                alt="making-chocolate-photo"
+               id="my-image"
                width="600"
                height="400"
             />
-            <svg class="howtomade-icon-wrap" width="44" height="44">
-               <use
-                  href="./img/icons/play.svg#play"
-                  class="howtomade-icon"
-               ></use>
-            </svg>
-            <svg class="howtomade-icon-wrap-mobile" width="35" height="35">
-               <use
-                  href="./img/icons/play-mobile.svg#play-mobile"
-                  class="howtomade-icon-mobile"
-               ></use>
-            </svg>
+            <button class="howtomade-video-btn" type="button" id="button-id">
+               <svg class="howtomade-icon-wrap" width="44" height="44">
+                  <use
+                     href="./img/icons/play.svg#play"
+                     class="howtomade-icon"
+                  ></use>
+               </svg>
+               <svg class="howtomade-icon-wrap-mobile" width="35" height="35">
+                  <use
+                     href="./img/icons/play-mobile.svg#play-mobile"
+                     class="howtomade-icon-mobile"
+                  ></use>
+               </svg>
+            </button>
+            <div id="iframe-id" class="howtomade-video"
+               width="600"
+               height="400"
+               name="howtomade_iframe_video"
+               >
+            </div>
          </picture>
          <div class="howtomade-desc-wrap">
             <h3 class="howtomade-subtitle">
