--- a/src/css/section-sellers.css
+++ b/src/css/section-sellers.css
@@ -148,9 +148,11 @@
    opacity: 0;
    visibility: hidden;
    pointer-events: none;
+   overflow: hidden;
 }
 html.is-active {
    overflow: hidden;
+   margin-right: 17px;
 }
 
 .modal-reviews {
