--- a/src/partials/modal-revievs.html
+++ b/src/partials/modal-revievs.html
@@ -49,7 +49,7 @@
                class="reviews-form-input-message reviews-form-input"></textarea>
          </div>
          <!-- ============= OPEN BTN для 4 модалки -->
-         <button class="reviews-send-btn btn-close" type="submit" data-first-modal-close data-modal-open>Send</button>
+         <button class="reviews-send-btn button-orange btn-close" type="submit" data-first-modal-close data-modal-open>Send</button>
       </form>
    </div>
 </div>
