--- a/src/partials/modal-subscribe.html
+++ b/src/partials/modal-subscribe.html
@@ -25,7 +25,7 @@
                placeholder="Enter your E-mail"
                class="subcribe-text-input"
             />
-            <button class="subscribe-form-send" type="submit">Submit</button>
+            <button class="button-orange subscribe-form-send" type="submit">Submit</button>
          </div>
         
       </form>
