--- a/src/partials/modal-hero.html
+++ b/src/partials/modal-hero.html
@@ -14,7 +14,6 @@
             <span class="hero-form-title-color">BUY</span> NOW
          </h1>
          <div class="hero-form-items">
-            <a href="" class="candy-order-active">
                <label class="hero-form-item-wrapper">
                   <input
                      class="candy-order-checkbox"
@@ -22,36 +21,31 @@
                      name="candy"
                      value="100g"
                   />
-                  <div class="candy-order">
+                  <span class="candy-order">
                      <img src="./img/popup/order-item1.png" alt="candy" />
-                     <p>100 g</p>
-                  </div>
+                     <span>100 g</span>
+                  </span>
                </label>
-            </a>
 
-            <a href="#" class="candy-order-active">
                <label class="hero-form-item-wrapper">
                   <input type="radio" class="candy-order-checkbox" name="candy" value="200g" />
-                  <div class="candy-order">
+                  <span class="candy-order">
                      <img src="./img/popup/order-item2.png" alt="cake" />
-                     <p>200 g</p>
-                  </div>
+                     <span>200 g</span>
+                  </span>
                </label>
-            </a>
 
-            <a href="#" class="candy-order-active">
                <label class="hero-form-item-wrapper">
                   <input type="radio" class="candy-order-checkbox" name="candy" value="300g" />
-                  <div class="candy-order">
+                  <span class="candy-order">
                      <img src="./img/popup/order-item3.png" alt="candy" />
-                     <p>300 g</p>
-                  </div>
+                     <span>300 g</span>
+                  </span>
                </label>
-            </a>
          </div>
 
          <div class="pers-inf-wrapper">
-            <p class="pers-inf-text form-text">Personal information</p>
+            <span class="pers-inf-text form-text">Personal information</span>
             <div class="form-pers-inf-items">
                <input
                   type="text"
@@ -68,7 +62,7 @@
             </div>
          </div>
          <label class="hero-form-email">
-            <p class="form-text">Email</p>
+            <span class="form-text">Email</span>
             <input
                type="text"
                name="e-mail"
@@ -77,7 +71,7 @@
             />
          </label>
          <label class="hero-form-phone">
-            <p class="form-text">Phone number</p>
+            <span class="form-text">Phone number</span>
             <span class="counrty-icon">+380</span>
             <input
                type="text"
@@ -87,7 +81,7 @@
             />
          </label>
          <label class="hero-form-card">
-            <p class="form-text">Card number</p>
+            <span class="form-text">Card number</span>
             <span class="mastercard-icon"></span>
             <input
                type="text"
@@ -97,7 +91,7 @@
             />
          </label>
          <label class="hero-form-comment">
-            <p class="form-text">Comment</p>
+            <span class="form-text">Comment</span>
             <textarea  class="hero-item-input comment-input" name="comment" placeholder="Enter text"></textarea>
          </label>
          <button class="hero-form-send button-orange" type="submit">Submit</button>
