--- a/src/partials/section-hero.html
+++ b/src/partials/section-hero.html
@@ -9,7 +9,7 @@
         <div class="hero-buttons">
           <button class="button buy-now-button button-orange btn-open modal-scroll" type="button" data-second-modal-open>Buy
             now</button>
-          <a class="button how-its-made-button" href="#howtomade">How it&#39;s made</a>
+          <a class="button how-its-made-button" href="#howtomade">How it's made</a>
         </div>
         <a class="scroll-down-button" href="#footer">scroll down<svg class="scroll-down-icon" width="16" height="16">
             <use href="./img/icons/icons.svg#icon-chek-box"></use>
