--- a/src/css/section-subscribe.css
+++ b/src/css/section-subscribe.css
@@ -245,12 +245,22 @@
 .modal-scroll {
 }
 .subscribe-modal-bg {
-   background-image: url(../img/popup/pop-up-bc-x1.jpg);
+   background-image: url(/img/popup/pop-up-bc-x1.jpg);
    background-size: cover;
    background-position: center center;
    width: 100%;
    height: 169px;
    border-radius: 12px 12px 0 0;
+}
+@media screen and (min-device-pixel-ratio: 2),
+screen and (min-resolution: 192dpi),
+screen and (min-resolution: 2dppx) {
+   .subscribe-modal-bg {
+      background-image: linear-gradient(180deg,
+            rgba(17, 17, 17, 0) 0%,
+            rgba(17, 17, 17, 0.4) 100%),
+         url(/img/popup/pop-up-bc-x2.jpg);
+   }
 }
 .subscribe-form-title {
    font-weight: 600;
