--- a/src/css/section-subscribe.css
+++ b/src/css/section-subscribe.css
@@ -239,6 +239,13 @@
    height: 28px;
 }
 
+.subscribe-close-btn:hover svg,
+.subscribe-close-btn:focus svg {
+   stroke:var(--Orange);
+   width: 28px;
+   height: 28px;
+}
+
 .hero-close-btn {
 }
 
