--- a/src/partials/section-howtomade.html
+++ b/src/partials/section-howtomade.html
@@ -1,7 +1,7 @@
 <section class="howtomade-section" id="howtomade">
    <div class="container howtomade-container">
       <h2 class="howtomade-title">
-         hOW IT&#39;S<span class="howtomade-title-span">&nbsp;made?</span>
+         hOW IT'S<span class="howtomade-title-span"> made?</span>
       </h2>
       <div class="howtomade-wrapper">
          <div class="howtomade-vido-img-wrap">
