--- a/src/partials/section-products.html
+++ b/src/partials/section-products.html
@@ -32,7 +32,7 @@
                   height="201"
                />
                <div class="product-item-content">
-                  <h3 class="product-item-title">APPLE&#38;CRANBERRY</h3>
+                  <h3 class="product-item-title">APPLE&CRANBERRY</h3>
                   <p class="product-item-description">Milk chocolate</p>
                </div>
                <button type="button" class="product-item-btn">50 UAH</button>
@@ -49,7 +49,7 @@
                   height="201"
                />
                <div class="product-item-content">
-                  <h3 class="product-item-title">lime&#38;sea salt</h3>
+                  <h3 class="product-item-title">lime&sea salt</h3>
                   <p class="product-item-description">Dark chocolate</p>
                </div>
                <button type="button" class="product-item-btn">66 UAH</button>
