--- a/src/partials/head.html
+++ b/src/partials/head.html
@@ -5,7 +5,7 @@
    <meta name="description" content="chocolate, chocolate making, chocolate product, how to make chocolate, what is chocolate made from, semi-sweet chocolate, milk chocolate, dark chocolate, white chocolate, simply chocolate, truffles, chocolate bars, buy chocolate">
    <title>Simply Chocolate</title>
 
-   <link rel="shortcut icon" href="../img/icons/favicon-heart.ico" type="image/ico" />
+   <link rel="shortcut icon" href="./img/icons/favicon-heart.ico" type="image/ico" />
 
    <link
       rel="stylesheet"
