--- a/src/partials/section-components.html
+++ b/src/partials/section-components.html
@@ -5,11 +5,7 @@
          <span class="component-word">taste</span> sensation
       </h2>
       <p class="component-sub-text">
-         Milk chocolate is a solid chocolate confectionery containing cocoa,
-         sugar and milk. It is the most consumed type of chocolate. Chocolate
-         was originally sold and consumed as a beverage in pre-Columbian times.
-         Although four-fifths of all milk chocolate is sold in the United States
-         and Europe.
+         At Simply Chocolate, we believe that the secret to exceptional chocolate is in the details. From the sourcing of the finest ingredients to the careful crafting of each individual piece, every step of our process adds up to one exceptional taste sensation.
       </p>
       <ul class="component-menu">
          <li class="component-card-wrapper" id="sweet-chokolate">
