--- a/src/css/section-components.css
+++ b/src/css/section-components.css
@@ -39,9 +39,15 @@
     }
     .component-title{
         margin-bottom: 24px;
+        max-width: 290px;
+        margin-left: auto;
+        margin-right: auto;
     }
     .component-menu {
         margin-top: 32px;
+    }
+    .component-sub-text {
+        max-width: 335px;
     }
 }
 @media screen and (min-width:768px) {
@@ -51,6 +57,14 @@
     }
     .component-title{
         margin-bottom: 28px;
+        margin: 0 auto;
+        width: 370px;
+    }
+    .component-sub-text {
+        width: 486px;
+        margin: 0 auto;
+        margin-bottom: 50px;
+        margin-top: 28px;
     }
 }
 @media screen and (min-width:768px) and (max-width:1199px) {
